<resources>
    <string name="app_name">LineChat</string>
    <string name="already">Alredy\nhave an \naccount?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="req">You have to fill in the field!</string>
    <string name="add">Add</string>
    <string name="offline">offline</string>
    <string name="enter_name">Enter name..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>